plugins {
    id 'java'
    id 'idea'
}

group 'codesquad'
version '1.0-SNAPSHOT'
sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {

    implementation 'com.google.guava:guava:29.0-jre'
    implementation 'ch.qos.logback:logback-classic:1.2.3'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation 'org.assertj:assertj-core:3.16.1'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.0.0-M4'

}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
}
